--- a/android/build.gradle
+++ b/android/build.gradle
@@ -69,6 +69,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation files('libs/DisplaySDK-2.2.2.jar')
+    implementation files('libs/XXPermissions-13.5.aar')
 
 }
 
