--- a/android/build.gradle
+++ b/android/build.gradle
@@ -67,9 +67,9 @@ android {
     }
 }
 dependencies {
-    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/DisplaySDK-2.2.2.jar')
-    implementation files('libs/XXPermissions-13.5.aar')
+//    implementation files('libs/XXPermissions-13.5.aar')
 
 }
 
