--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -56,6 +56,8 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -64,4 +66,4 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies { implementation files('D:\\Tanvir\\display_sdk_flutter\\android\\libs\\XXPermissions-13.5.aar') }
