--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   integration_test:
