--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   permission_handler: ^11.3.0
+  async: ^2.11.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
